# SmartHarvestSE

./: .gitignore  ActorTracker.h  AlchemyItemHelper.cpp  AlchemyItemHelper.h  ArmorHelper.cpp  ArmorHelper.h  AutoHarvestSE.rc  AutoHarvestSE.vcxproj  AutoHarvestSE.vcxproj.filters  BoundedList.h  CMakeLists.txt  CMakePresets.json  Collection.cpp  Collection.h  CollectionFactory.cpp  CollectionFactory.h  CollectionManager.cpp  CollectionManager.h  Common.props  Condition.cpp  Condition.h  ConditionTreeFactory.cpp  ConditionTreeFactory.h  EnchantmentItemHelper.cpp  EventPublisher.cpp  EventPublisher.h  Exception.cpp  Exception.h  ExcludedLocations.cpp  ExcludedLocations.h  ExtraDataListHelper.cpp  ExtraDataListHelper.h  FormHelper.cpp  FormHelper.h  GridCellArrayHelper.cpp  GridCellArrayHelper.h  IHasValueWeight.cpp  IHasValueWeight.h  IRangeChecker.h  InventoryItem.cpp  (+77 more)
Batch/: build-AE-Logging-artifacts-rar.bat  build-AE-artifacts-rar.bat  build-Logging-artifacts-rar.bat  build-artifacts-rar.bat
Collections/Builtin/: SHSE.Builtin.SpecialCases.json  SHSE.Collections.BlackList.json  SHSE.Collections.ManualLoot.json  SHSE.ExcessInventory.Sticky.json
Collections/Edit Scripts/: SHSE Find Collectible FLSTs.pas
Collections/Examples/: SHSE.Collections.COIN.json  SHSE.Collections.Errors.json  SHSE.Collections.Hunterborn.json  SHSE.Collections.LoTD.json  SHSE.Collections.LoTD2.json  SHSE.Collections.ManualLoot.json  SHSE.Collections.NSFW.json  SHSE.Collections.OreVeinsGlow.json  SHSE.Collections.Samples.json  SHSE.Collections.Uniques.json
Collections/Schema/: SHSE.SchemaCollections.json
Config/: AutoHarvestSE.ini  CollectionDefinition.LoTD.json  CollectionDefinition.Samples.json  CollectionDefinition.json  SHSE.Collections.LoTD.json  Schema.json  SmartHarvestSE.Defaults.ini  SmartHarvestSE.ini
Config/default/: blocklist.tsv  clutter.tsv  critter.tsv  fieldcrop.tsv  flora.tsv  gem.tsv  orevein.tsv  septim.tsv
Edit Scripts/: SHSE Find Collectible FLSTs.pas
Filters/: SHSE.Filter.DeadBody.json  SHSE.SchemaFilters.json
Interface/towawot/: AutoHarvestSE.dds
Interface/translations/: AutoHarvestSE_czech.txt  AutoHarvestSE_english.txt  AutoHarvestSE_french.txt  AutoHarvestSE_german.txt  AutoHarvestSE_italian.txt  AutoHarvestSE_japanese.txt  AutoHarvestSE_polish.txt  AutoHarvestSE_russian.txt  AutoHarvestSE_spanish.txt  SmartHarvestSE_czech.txt  SmartHarvestSE_english.txt  SmartHarvestSE_french.txt  SmartHarvestSE_german.txt  SmartHarvestSE_italian.txt  SmartHarvestSE_japanese.txt  SmartHarvestSE_polish.txt  SmartHarvestSE_russian.txt  SmartHarvestSE_spanish.txt
JsonTest/: JsonTest.cpp  JsonTest.vcxproj  JsonTest.vcxproj.filters
Plugin/: AutoHarvestSE.esp  SmartHarvestSE.esp  meta.ini
Scripts/: AutoHarvestSE.psc  AutoHarvestSE_Events_Alias.psc  AutoHarvestSE_HarvestSpell_MGEF.psc  AutoHarvestSE_mcm.psc  SHSE_EventsAlias.pex  SHSE_EventsAlias.psc  SHSE_LocatePlayer.pex  SHSE_LocatePlayer.psc  SHSE_LootSense.pex  SHSE_MCM.pex  SHSE_MCM.psc  SHSE_PluginProxy.pex  SHSE_PluginProxy.psc  SmartHarvestSE.psc  SmartHarvestSE_Events_Alias.psc  SmartHarvestSE_mcm.psc
Scripts/Source/: SHSE_EventsAlias.psc  SHSE_LootSense.psc  SHSE_MCM.psc  SHSE_PluginProxy.psc
cmake/: Ver.h.in  archive_artifacts.cmake  version.rc.in  x64-windows-skse.cmake
include/: LogStackWalker.h  StackWalker.h
src/: PluginFacade.cpp  PluginFacade.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  main.cpp
src/Collections/: Collection.cpp  Collection.h  CollectionFactory.cpp  CollectionFactory.h  CollectionManager.cpp  CollectionManager.h  Condition.cpp  Condition.h
src/Data/: CosaveData.cpp  CosaveData.h  LeveledItemCategorizer.cpp  LeveledItemCategorizer.h  LoadOrder.cpp  LoadOrder.h  SettingsCache.cpp  SettingsCache.h  SimpleIni.cpp  SimpleIni.h  dataCase.cpp  dataCase.h  iniSettings.cpp  iniSettings.h
src/FormHelpers/: AlchemyItemHelper.cpp  AlchemyItemHelper.h  ArmorHelper.cpp  ArmorHelper.h  EnchantmentItemHelper.cpp  EnchantmentItemHelper.h  ExtraDataListHelper.cpp  ExtraDataListHelper.h  FormHelper.cpp  FormHelper.h  IHasValueWeight.cpp  IHasValueWeight.h  PlayerCellHelper.cpp  PlayerCellHelper.h  WeaponHelper.cpp  WeaponHelper.h  sound.cpp  sound.h
src/Looting/: IRangeChecker.cpp  IRangeChecker.h  InventoryItem.cpp  InventoryItem.h  LootableREFR.cpp  LootableREFR.h  ManagedLists.cpp  ManagedLists.h  NPCFilter.cpp  NPCFilter.h  ObjectType.h  ProducerLootables.cpp  ProducerLootables.h  ReferenceFilter.cpp  ReferenceFilter.h  ScanGovernor.cpp  ScanGovernor.h  TheftCoordinator.cpp  TheftCoordinator.h  TryLootREFR.cpp  TryLootREFR.h  containerLister.cpp  containerLister.h  objects.cpp  objects.h  tasks.cpp  tasks.h
src/Utilities/: Enums.cpp  Enums.h  Exception.cpp  Exception.h  LogStackWalker.cpp  LogStackWalker.h  LogWrapper.h  RecursiveLock.cpp  RecursiveLock.h  StackWalker.cpp  StackWalker.h  debugs.cpp  debugs.h  utils.cpp  utils.h  version.cpp  version.h  versiondb.h
src/VM/: EventPublisher.cpp  EventPublisher.h  TaskDispatcher.cpp  TaskDispatcher.h  UIState.cpp  UIState.h  papyrus.cpp  papyrus.h
src/WorldState/: ActorTracker.cpp  ActorTracker.h  AdventureTargets.cpp  AdventureTargets.h  CraftingItems.cpp  CraftingItems.h  GameCalendar.cpp  GameCalendar.h  InventoryCache.cpp  InventoryCache.h  LocationTracker.cpp  LocationTracker.h  PartyMembers.cpp  PartyMembers.h  PlacedObjects.cpp  PlacedObjects.h  PlayerHouses.cpp  PlayerHouses.h  PlayerState.cpp  PlayerState.h  PopulationCenters.cpp  PopulationCenters.h  PositionData.h  QuestTargets.cpp  QuestTargets.h  Saga.cpp  Saga.h  VisitedPlaces.cpp  VisitedPlaces.h
src/alglib/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h
textures/effects/gradients/: brushedcopperbronze.dds  brushedgold.dds  brushedsilver.dds  shse_blue_gradient.dds  shse_green_gradient.dds  shse_purple_gradient.dds  shse_red_gradient.dds
